Photo Editor: Corrected sliders vertical alignment
BUG=chromium-os:21076
TEST=


Review URL: http://codereview.chromium.org/8775003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@112458 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: dc1498a2b3fd2df44d5517652b8dfba0e1b1b2e8

--- a/chrome/browser/resources/file_manager/js/image_editor/gallery.css
+++ b/chrome/browser/resources/file_manager/js/image_editor/gallery.css
@@ -522,6 +522,7 @@ body {
 .gallery .edit-modal .range {
   -webkit-appearance: none !important;
   height: 3px;
+  margin-top: 1px;
   margin-right: 10px;
 }
 
